--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,11 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Rider Files
+encodings.xml
+indexLayout.xml
+projectSettingsUpdater.xml
+vcs.xml
+workspace.xml
+/.idea
